# softcam

./: CMakeLists.txt
src/softcam/: softcam.cpp
